set(LIBRARY ${CMAKE_PROJECT_NAME}_lib)

file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp)
if("SSE" STREQUAL "${CMAKE_BUILD_MODE}")
    file(GLOB_RECURSE SOURCES_ASM LIST_DIRECTORIES true *.asm)
    list(APPEND SOURCES ${SOURCES_ASM})
endif()

set(SOURCES ${SOURCES})

add_library(${CMAKE_PROJECT_NAME}_lib STATIC ${SOURCES})
target_link_libraries(${BINARY} ${LIBRARY})